flux/apps/romm/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: romm-db
  namespace: gaming
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/matchTag: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: romm-db
  template:
    metadata:
      labels:
        app: romm-db
    spec:
      containers:
        - name: mariadb
          image: mariadb:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
          livenessProbe:
            exec:
              command:
                - healthcheck.sh
                - --connect
                - --innodb_initialized
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            exec:
              command:
                - healthcheck.sh
                - --connect
                - --innodb_initialized
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: romm-mysql-data
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: romm
  namespace: gaming
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/matchTag: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: romm
  template:
    metadata:
      labels:
        app: romm
    spec:
      enableServiceLinks: false
      containers:
        - name: romm
          image: rommapp/romm:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: romm-resources
              mountPath: /romm/resources
            # - name: romm-redis-data
            #   mountPath: /redis-data
            - name: romm-library
              mountPath: /romm/library
            - name: romm-assets
              mountPath: /romm/assets
            - name: romm-config
              mountPath: /romm/config
      volumes:
        - name: romm-resources
          persistentVolumeClaim:
            claimName: romm-resources
        # - name: romm-redis-data
        #   persistentVolumeClaim:
        #     claimName: romm-redis-data
        - name: romm-library
          persistentVolumeClaim:
            claimName: romm-library
        - name: romm-assets
          persistentVolumeClaim:
            claimName: romm-assets
        - name: romm-config
          persistentVolumeClaim:
            claimName: romm-config
