flux/apps/romm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: romm
  namespace: gaming
spec:
  selector:
    app: romm
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
